--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -8,17 +8,17 @@
 </head>
 <body>
 	<div>
-		<h1><a	href="">Django	Girls	Blog</a></h1>
+		<h1><a	href="">Arun's	Blog</a></h1>
 	</div>
 	<div>
-		<p>published:	14.06.2014,	12:14</p>
-		<h2><a	href="">My	first	post</a></h2>
-		<p>Aenean	eu	leo	quam.	Pellentesque	ornare	sem	lacinia	quam	venenatis	vestibulum.	Donec	id	elit	non	mi	porta	gravida	at	ege
-	</div>
-	<div>
-		<p>published:	14.06.2014,	12:14</p>
-		<h2><a	href="">My	second	post</a></h2>
-		<p>Aenean	eu	leo	quam.	Pellentesque	ornare	sem	lacinia	quam	venenatis	vestibulum.	Donec	id	elit	non	mi	porta	gravida	at	ege
+		{% for post in posts %}
+			<div>
+				<p>created: {{post.created_date}}</p>
+				<h1><a href="" title="">{{post.title}}</a></h1>
+				<p>{{post.text|linebreaks}}</p>
+				
+			</div>
+		{% endfor %}
 	</div>
 </body>
 </html>
