--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,24 +1,15 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Arun's Blog</title>
-	<link rel="stylesheet" href="">
-</head>
-<body>
-	<div>
-		<h1><a	href="">Arun's	Blog</a></h1>
-	</div>
-	<div>
-		{% for post in posts %}
-			<div>
-				<p>created: {{post.created_date}}</p>
-				<h1><a href="" title="">{{post.title}}</a></h1>
-				<p>{{post.text|linebreaks}}</p>
-				
+
+{% extends "blog/base.html" %}
+
+{% block content %}
+	{% for post in posts %}
+		<div class="post">
+			<div class="date">
+				{{post.created_date}}
 			</div>
-		{% endfor %}
-	</div>
-</body>
-</html>
+			<h1><a href="{%	url	"blog.views.post_detail"	pk=post.pk	%}" title="">{{post.title}}</a></h1>
+			<p>{{post.text|linebreaks}}</p>
+
+		</div>
+	{% endfor %}
+{% endblock content %}
