--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -13,7 +13,7 @@
 <body>
 	<div class="page-header">
 		<a	href="{%	url	"blog.views.post_new"	%}"	class="top-menu"><span	class="glyphicon	glyphicon-plus"></span></a>
-		<h1><a	href="">Arun's	Blog</a></h1>
+		<h1><a	href="{% url "blog.views.post_list" %}">Arun's	Blog</a></h1>
 	</div>
 	<div class="content container">	
 		<div class="row">
